v1.03 - Big maintenance patch 2020
	Improved CPU performance by 20%
	Upgraded pixi.js from version 4.4.1 to 5.1.6
	Rewrote the gradient shader. Lots of extra steps removed and it's now fully documented
	Fixed broken music filepaths in the demo version
	Changed some CSS to prevent having two versions for iFrame and standalone hosting
	Fixed all setTimeout() string evaluation anti-patterns
	Replaced 0/269 var declarations with const or let
	Replaced all complicated Javascript fade animations with two lines of CSS
	Fixed many negative margin CSS anti-patterns
	Fixed two bugs that would result in inaccurate preloader console messages
	New console messages for background music

v1.02 - Chrome breaks web audio standards
	Added a 'click to start' page to account for the new Chrome autoplay protection
	Fixed a bug that would sometimes crash the loading screen

v1.01 - Day 1 bugs
	Fixed a bug that exposed a piece of the end credits scene, allowing accidental page resets

v1.0 - Initial Release
	TRANSCEND, DIAMOND, and RAINBOW phases
	17 BGM tracks